<resources>
    <string name="app_name">Tagger</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_options">Options</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_sync">Sync</string>
    <string name="action_mapview">Switch to Map</string>
    <string name="action_listingsview">Switch to Listings</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_publish_event">Publish Event</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- navigation drawer item labels  -->
    <string name="nav_item_login">Login</string>
    <string name="nav_item_account">Account</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_listings">Event Listings</string>
    <string name="nav_item_map">Map</string>
    <string name="nav_item_post_event">Post New Event</string>
    <!--<string name="nav_item_recyclerview_example">Recyclerview Example</string>-->

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_login</item>
        <item>@string/nav_item_account</item>
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_listings</item>
        <item>@string/nav_item_map</item>
        <item>@string/nav_item_post_event</item>
        <!--<item>@string/nav_item_recyclerview_example</item>-->
    </string-array>

    <string name="title_login">Login</string>
    <string name="title_map">Events Map</string>
    <string name="title_listings">Event Listings</string>
    <string name="title_home">Home</string>
    <string name="title_filters">Filters</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_cluster_info_window">Cluster Info</string>
    <string name="title_my_gigfm">My GigFM</string>

    <!--<string name="title_recyclerview_example">Recyclerview Example</string>-->


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Enter Password Again</string>
    <string name="link_login"><u>Already a member? Login</u></string>
    <string name="link_register"><u>No account yet? Register</u></string>
    <string name="skip_login"><u>Browse as guest</u></string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>


    <string name="name">User Name</string>
    <string name="welcome">Welcome, </string>
    <string name="button">Search</string>
    <string name="startservicebutton">Start Service</string>

    <string name="access_token">token</string>
    <string name="clearrealmbutton">Clear Realm</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="hello_world">hello world</string>

    <string name="buy_tickets"><u>Buy Tickets</u></string>
    <string name="spotify_url">https://play.spotify.com/artist/</string>

    <string-array name="empty_array"/>

    <string name="home_week">This Week</string>
    <string name="home_month">This Month</string>
    <string name="home_tenner">Tenner or Less</string>
    <string name="home_festivals">Festivals</string>
    <string name="home_genres">Search by Genres</string>
    <string name="home_favs">Your Favourites</string>

    <string-array name="homepage">
        <item>This Week</item>
        <item>This Month</item>
        <item>Tenner or Less</item>
        <item>Festivals</item>
        <item>Search by Genres</item>
        <item>Your Favourites</item>
    </string-array>

    <string-array name="genres">
        <item>Blues</item>
        <item>Cantautores</item>
        <item>Classic Rock</item>
        <item>Classical and Opera</item>
        <item>Country</item>
        <item>Cover Bands</item>
        <item>EDM and Ibiza</item>
        <item>Festivals</item>
        <item>Flamenco</item>
        <item>Folk and World Music</item>
        <item>Gregorianisch</item>
        <item>Hard Rock and Metal</item>
        <item>Indie and Alternative</item>
        <item>Jazz and Reggae</item>
        <item>Nederlandstalig</item>
        <item>Other</item>
        <item>Pop and Rock</item>
        <item>RnB and Hip-Hop</item>
        <item>Scene Francaise</item>
        <item>Schlager</item>
        <item>Soul</item>
        <item>Variete Francaise</item>
    </string-array>
    <string-array name="genres_values">
        <item>91</item>
        <item>74</item>
        <item>54</item>
        <item>6</item>
        <item>58</item>
        <item>61</item>
        <item>14</item>
        <item>35</item>
        <item>73</item>
        <item>17</item>
        <item>63</item>
        <item>11</item>
        <item>12</item>
        <item>15</item>
        <item>62</item>
        <item>18</item>
        <item>10</item>
        <item>13</item>
        <item>78</item>
        <item>41</item>
        <item>55</item>
        <item>67</item>
    </string-array>

    <string name="facebook_app_id">fb135022110243891</string>
    <string name="goog_app_id">616404377847-vp0ulrje62vr2oq41ifnq1a531oovht5.apps.googleusercontent.com</string>

    <string name="filter_available_tickets">Only show events with tickets?</string>
    <string name="filter_max_price">Maximum Ticket Price</string>
</resources>
