<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

 <!--   <item
        android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_calendar_action"
        app:showAsAction="always" /> -->

      <item
          android:id="@+id/action_search"
          android:title="@string/action_search"
          android:orderInCategory="100"
          android:icon="@drawable/ic_search_action"
          app:showAsAction="collapseActionView|always"
          app:actionViewClass="android.support.v7.widget.SearchView"
           />

    <item
        android:id="@+id/action_options"
        android:title="@string/action_options"
        android:checkable="true"
        android:orderInCategory="100"
        android:icon="@drawable/ic_tune_white_24dp"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_mapview"
        android:title="@string/action_mapview"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_listingsview"
        android:title="@string/action_listingsview"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_listings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sync_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_cache"
        android:orderInCategory="100"
        android:title="@string/action_clear_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_feedback"
        android:orderInCategory="100"
        android:title="@string/action_send_feedback"
        app:showAsAction="never" />
 <!---   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
-->

</menu>
